# atlas-voice

./: .env.example  .gitignore  ARCHON_PROJECT_TRACKER.md  BUILD_SUMMARY.md  DEMO.md  LLM-OVERVIEW.md  LORA_READY_TO_RUN.md  LORA_TRAINING_GUIDE.md  MIGRATION_FROM_OLD.md  NUCLEAR_SAFE_ROOM_DOCS.md  OMAR_ANALYSIS_AND_IMPROVEMENTS.md  OMAR_VOICE_PROMPT_V1_RAW.txt  ONE_SHOT.md  PRIVACY_AUDIT_REPORT.md  QUICK_START_FINISHED.md  README.md  SETUP.md  TEST_RESULTS.md  generate_final_prompt.py  personalized_voice_prompt.json  prep_training_data.py  pyproject.toml  start_lora_training.sh  test_omar_model.py  train_lora_local.py  update-oos.sh
_archive_old_project/: ATLAS_UPDATE_INSTRUCTIONS.md  GITHUB_PUSH_SUMMARY.md  QUICK_START.md  setup_github_public.sh  telegram_bot.py  voice.py
_archive_old_project/oos/: ENHANCED_CONTENT_ANALYZER.py  ENHANCED_VOICE_INTEGRATOR.py  INTEGRATION_REPORT.json
_archive_old_project/src/: ai_voice_generator_fallback.py  comprehensive_voice_analyzer.py  corpus_sampler.py  create_ultimate_profile.py  enhanced_ai_voice_generator.py  main.py  oos_archon_direct.py  oos_archon_final.py  rich_corpus_sampler.py  smart_cli.py  test_administrator.py
atlas_voice/: __init__.py
atlas_voice/api/: __init__.py  app.py
atlas_voice/cli/: __init__.py  main.py
atlas_voice/models/: __init__.py  pattern.py  prompt.py
atlas_voice/services/: __init__.py  analyzer.py  (+2 more)
data/: test_samples.json
oos/: ENHANCED_VOICE_INTEGRATOR_SIMPLE.py  PROTOTYPE_TEST.py
src/: ai_voice_generator.py  ai_voice_generator_api.py  content_sampler.py  intelligent_interface.py  oos_archon_integration.py  security_remediation_archon.py
tests/: __init__.py  authenticity_testing_system.py  iterative_improvement_system.py  test_analyzer.py  test_generator.py  test_real_data_scale.py
web/: app.js  index.html  style.css
(+3 files in other folders)
